<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/repeat_background"
    android:padding="20dp"
    tools:context=".fragments.ProfileFragment">

    <!-- CARD PROFILE -->

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llButton"
        android:layout_marginBottom="15dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- FOTO PROFILE -->

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/imgLogo"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/user" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/btnChangePhoto"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_alignBottom="@id/imgLogo"
                        android:layout_alignEnd="@id/imgLogo"
                        android:background="@drawable/button_style1"
                        android:src="@drawable/baseline_photo_camera_24" />

                </RelativeLayout>

                <!-- DATA USER -->

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <!-- NAMA -->

                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".35"
                            android:text="Nama"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvNama"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".65"
                            android:text="@string/myname" />

                    </TableRow>

                    <!-- TANGGAL LAHIR -->

                    <TableRow
                        android:layout_marginTop="15dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".35"
                            android:text="Tanggal Lahir"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvTanggalLahir"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".65"
                            android:text="@string/mybirth" />

                    </TableRow>

                    <!-- JENIS KELAMIN -->

                    <TableRow
                        android:layout_marginTop="15dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".35"
                            android:text="Jenis Kelamin"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvJenisKelamin"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".65"
                            android:text="@string/mygender" />

                    </TableRow>

                    <!-- NOMOR HP -->

                    <TableRow
                        android:layout_marginTop="15dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".35"
                            android:text="Nomor HP"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvNomorHP"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".65"
                            android:text="@string/myphone" />

                    </TableRow>

                    <!-- ALAMAT -->

                    <TableRow
                        android:layout_marginTop="15dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".35"
                            android:text="Alamat"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvAlamat"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".65"
                            android:text="@string/myaddres" />

                    </TableRow>

                    <!-- EMAIL -->

                    <TableRow
                        android:layout_marginTop="15dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".35"
                            android:text="Email"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvEmail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".65"
                            android:text="@string/myemail" />

                    </TableRow>

                    <!-- WAKTU SESI -->

                    <TableRow
                        android:layout_marginTop="15dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".35"
                            android:text="Waktu Sesi"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvWaktuSesi"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".65"
                            android:text="@string/mysession" />

                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

    <!-- BUTTON -->

    <LinearLayout
        android:id="@+id/llButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEditProfil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_style2"
            android:drawableEnd="@drawable/baseline_edit_24"
            android:text="Ubah Profil"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnHapusUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_style3"
            android:drawableEnd="@drawable/baseline_delete_forever_24"
            android:text="Hapus Akun"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <!-- PROGRESS BAR -->

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>